--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -18,24 +18,22 @@
                 display: block;
                 cursor: pointer;
                 position: relative;
-
-                &::after {
-                    content: '+';
-                    position: absolute;
-                    top: 0;
-                    right: 24px;
-                    height: 100%;
-                    display: flex;
-                    align-items: center;
-                    font-size: 40px;
-
-                    
-                }
+                max-width: 95%;
 
                 @media (max-width: 768px) {
                     font-size: 15px;
                     line-height: 25px;
                 }
+            }
+
+            span {
+                position: absolute;
+                top: 0;
+                right: 0px;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                font-size: 40px;
             }
 
             &__answer {
