--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -10,6 +10,7 @@
         &__item {
             background-color: #13151d;
             margin-bottom: 16px;
+            
 
             &__question {
                 color: #fff;
@@ -18,22 +19,27 @@
                 display: block;
                 cursor: pointer;
                 position: relative;
-                max-width: 95%;
+
+                &::after {
+                    content: '+';
+                    position: absolute;
+                    top: 0;
+                    right: 24px;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    font-size: 40px; 
+                }
 
                 @media (max-width: 768px) {
-                    font-size: 15px;
+                    font-size: 14px;
                     line-height: 25px;
-                }
-            }
 
-            span {
-                position: absolute;
-                top: 0;
-                right: 0px;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                font-size: 40px;
+                    .span {
+                        display: inline-block;
+                        max-width: 250px;
+                    }
+                }
             }
 
             &__answer {
